SLING-10014 Use ServiceUserMapped to ensure presence of service user mapping