@@ -355,17 +355,17 @@ public class AuthorizableValueMap implements ValueMap {
         if (String.class == type) {
             return (T) jcrValue.getString();
         } else if (Byte.class == type) {
-            return (T) new Byte((byte) jcrValue.getLong());
+            return (T) Byte.valueOf((byte) jcrValue.getLong());
         } else if (Short.class == type) {
-            return (T) new Short((short) jcrValue.getLong());
+            return (T) Short.valueOf((short) jcrValue.getLong());
         } else if (Integer.class == type) {
-            return (T) new Integer((int) jcrValue.getLong());
+            return (T) Integer.valueOf((int) jcrValue.getLong());
         } else if (Long.class == type) {
-            return (T) new Long(jcrValue.getLong());
+            return (T) Long.valueOf(jcrValue.getLong());
         } else if (Float.class == type) {
-            return (T) new Float(jcrValue.getDouble());
+            return (T) Float.valueOf((float)jcrValue.getDouble());
         } else if (Double.class == type) {
-            return (T) new Double(jcrValue.getDouble());
+            return (T) Double.valueOf(jcrValue.getDouble());
         } else if (Boolean.class == type) {
             return (T) Boolean.valueOf(jcrValue.getBoolean());
         } else if (Date.class == type) {
